// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature renders feature full header properly 1`] = `
.c16 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c16.date {
  white-space: nowrap;
}

.c15 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c15.date {
  white-space: nowrap;
}

.c15:before {
  content: "";
  display: inline-block;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin: 6px 10px 1px 0;
  background-color: white;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
}

.c18 {
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c18:hover {
  opacity: 0.6;
}

.c18:first-child {
  padding-left: 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: white;
}

.c3 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
  background-image: linear-gradient(to bottom,rgba(0,0,0,0),rgba(0,0,0,0.3));
}

.c7 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 10px;
}

.c4 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  margin: auto;
}

.c4 .PartnerInline {
  position: absolute;
  z-index: 1;
  padding: 45px 45px 50px;
}

.c6 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  padding: 20px;
  color: #000;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
  background-image: url(https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FZR0wtJhg5Nez7Vm8uCP8Nw%252FDSC_0720-Edit-2.jpg&width=1600&quality=95);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  right: 0;
  width: 100%;
}

.c11 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 100px;
  line-height: 1.1em;
  margin-bottom: 75px;
  -webkit-letter-spacing: -0.035em;
  -moz-letter-spacing: -0.035em;
  -ms-letter-spacing: -0.035em;
  letter-spacing: -0.035em;
}

.c13 {
  max-width: 460px;
  margin-right: 30px;
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  line-height: 1.4em;
}

.c0 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  width: 100%;
  height: calc(100vh - 50px);
  position: relative;
}

.c0[data-type="text"] {
  height: auto;
}

.c0[data-type="text"] .c8 {
  margin-bottom: 150px;
}

.c0[data-type="split"] .c8 {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
}

.c0[data-type="split"] .c5 {
  width: 50%;
}

.c0[data-type="split"] .c1 {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
  width: 50vw;
}

.c0[data-type="split"] .c10 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0[data-type="split"] .c12 {
  margin-bottom: 30px;
}

.c0[data-type="fullscreen"] .c5 {
  padding: 50px;
  color: #fff;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: auto;
  text-shadow: 0 0 40px rgba(0,0,0,0.4);
}

@media (max-width:720px) {
  .c16 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c15 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c15:before {
    min-width: 8px;
    min-height: 8px;
  }
}

@media (max-width:600px) {
  .c17 {
    margin-top: 15px;
  }
}

@media (max-width:720px) {
  .c7 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c4 .PartnerInline {
    padding: 20px 15px 20px;
  }
}

@media (max-width:720px) {
  .c11 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1280px) {
  .c9 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 80px;
    line-height: 1.1em;
  }
}

@media (max-width:900px) {
  .c9 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
  }
}

@media (max-width:600px) {
  .c9 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 45px;
    line-height: 1.2em;
  }
}

@media (max-width:720px) {
  .c13 {
    margin-bottom: 28px;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c0[data-type="split"] .c8 {
    margin-bottom: 20px;
  }

  .c0[data-type="split"] .c5 {
    width: 100%;
  }

  .c0[data-type="split"] .c1 {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
    width: 100%;
  }
}

@media (max-width:720px) {
  .c0[data-type="fullscreen"] .c5 {
    padding: 20px;
  }
}

<div
  className="c0"
  data-type="fullscreen"
  height="calc(100vh - 50px)"
>
  <div>
    <div
      alt="What’s the Path to Winning an Art Prize?"
      className="c1 c2"
      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FZR0wtJhg5Nez7Vm8uCP8Nw%252FDSC_0720-Edit-2.jpg&width=1600&quality=95"
    />
    <div
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
    >
      <div
        className="c7"
      >
        Creativity
      </div>
      <div
        className="c8 c9"
      >
        What’s the Path to Winning an Art Prize?
      </div>
      <div
        className="c10 c11"
      >
        <div
          className="c12 c13"
        >
          <div
            className="feature__deck"
          >
            Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
          </div>
        </div>
        <div
          className="Byline c14"
          color="white"
        >
          <div
            className="author c15"
            color="white"
          >
            By 
            Casey Lesser
          </div>
          <div
            className="date c16"
          >
            Jun 29, 2017 11:00 am
          </div>
          <div
            className="c17"
          >
            <a
              className="c18"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 14 14"
                width="14px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c18"
              href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&text=What’s the Path to Winning an Art Prize?&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&via=artsy"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 16 14"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c18"
              href="mailto:?subject=What’s the Path to Winning an Art Prize?&body=Check out What’s the Path to Winning an Art Prize? on Artsy: https://www.artsy.net/article/artsy-editorial-path-winning-art-prize"
              onClick={[Function]}
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 17 14"
                width="17px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feature renders feature full header without a deck properly 1`] = `
.c14 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c14.date {
  white-space: nowrap;
}

.c13 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c13.date {
  white-space: nowrap;
}

.c13:before {
  content: "";
  display: inline-block;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin: 6px 10px 1px 0;
  background-color: white;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
}

.c16 {
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c16:hover {
  opacity: 0.6;
}

.c16:first-child {
  padding-left: 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: white;
}

.c3 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
  background-image: linear-gradient(to bottom,rgba(0,0,0,0),rgba(0,0,0,0.3));
}

.c7 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 10px;
}

.c4 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  margin: auto;
}

.c4 .PartnerInline {
  position: absolute;
  z-index: 1;
  padding: 45px 45px 50px;
}

.c6 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  padding: 20px;
  color: #000;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
  background-image: url(https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FZR0wtJhg5Nez7Vm8uCP8Nw%252FDSC_0720-Edit-2.jpg&width=1600&quality=95);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  right: 0;
  width: 100%;
}

.c11 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 100px;
  line-height: 1.1em;
  margin-bottom: 75px;
  -webkit-letter-spacing: -0.035em;
  -moz-letter-spacing: -0.035em;
  -ms-letter-spacing: -0.035em;
  letter-spacing: -0.035em;
}

.c0 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  width: 100%;
  height: calc(100vh - 50px);
  position: relative;
}

.c0[data-type="text"] {
  height: auto;
}

.c0[data-type="text"] .c8 {
  margin-bottom: 150px;
}

.c0[data-type="split"] .c8 {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
}

.c0[data-type="split"] .c5 {
  width: 50%;
}

.c0[data-type="split"] .c1 {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
  width: 50vw;
}

.c0[data-type="split"] .c10 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0[data-type="split"] .file__Deck-s1ria0lo-7 {
  margin-bottom: 30px;
}

.c0[data-type="fullscreen"] .c5 {
  padding: 50px;
  color: #fff;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: auto;
  text-shadow: 0 0 40px rgba(0,0,0,0.4);
}

@media (max-width:720px) {
  .c14 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c13 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c13:before {
    min-width: 8px;
    min-height: 8px;
  }
}

@media (max-width:600px) {
  .c15 {
    margin-top: 15px;
  }
}

@media (max-width:720px) {
  .c7 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c4 .PartnerInline {
    padding: 20px 15px 20px;
  }
}

@media (max-width:720px) {
  .c11 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1280px) {
  .c9 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 80px;
    line-height: 1.1em;
  }
}

@media (max-width:900px) {
  .c9 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
  }
}

@media (max-width:600px) {
  .c9 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 45px;
    line-height: 1.2em;
  }
}

@media (max-width:600px) {
  .c0[data-type="split"] .c8 {
    margin-bottom: 20px;
  }

  .c0[data-type="split"] .c5 {
    width: 100%;
  }

  .c0[data-type="split"] .c1 {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
    width: 100%;
  }
}

@media (max-width:720px) {
  .c0[data-type="fullscreen"] .c5 {
    padding: 20px;
  }
}

<div
  className="c0"
  data-type="fullscreen"
  height="calc(100vh - 50px)"
>
  <div>
    <div
      alt="What’s the Path to Winning an Art Prize?"
      className="c1 c2"
      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FZR0wtJhg5Nez7Vm8uCP8Nw%252FDSC_0720-Edit-2.jpg&width=1600&quality=95"
    />
    <div
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
    >
      <div
        className="c7"
      >
        Creativity
      </div>
      <div
        className="c8 c9"
      >
        What’s the Path to Winning an Art Prize?
      </div>
      <div
        className="c10 c11"
      >
        <div
          className="Byline c12"
          color="white"
        >
          <div
            className="author c13"
            color="white"
          >
            By 
            Casey Lesser
          </div>
          <div
            className="date c14"
          >
            Jun 29, 2017 11:00 am
          </div>
          <div
            className="c15"
          >
            <a
              className="c16"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 14 14"
                width="14px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c16"
              href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&text=What’s the Path to Winning an Art Prize?&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&via=artsy"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 16 14"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c16"
              href="mailto:?subject=What’s the Path to Winning an Art Prize?&body=Check out What’s the Path to Winning an Art Prize? on Artsy: https://www.artsy.net/article/artsy-editorial-path-winning-art-prize"
              onClick={[Function]}
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 17 14"
                width="17px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feature renders feature header with children properly 1`] = `
.c16 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c16.date {
  white-space: nowrap;
}

.c15 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c15.date {
  white-space: nowrap;
}

.c15:before {
  content: "";
  display: inline-block;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin: 6px 10px 1px 0;
  background-color: white;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
}

.c18 {
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c18:hover {
  opacity: 0.6;
}

.c18:first-child {
  padding-left: 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: white;
}

.c3 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
  background-image: linear-gradient(to bottom,rgba(0,0,0,0),rgba(0,0,0,0.3));
}

.c7 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 10px;
}

.c4 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  margin: auto;
}

.c4 .PartnerInline {
  position: absolute;
  z-index: 1;
  padding: 45px 45px 50px;
}

.c6 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  padding: 20px;
  color: #000;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
  background-image: url(https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FZR0wtJhg5Nez7Vm8uCP8Nw%252FDSC_0720-Edit-2.jpg&width=1600&quality=95);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  right: 0;
  width: 100%;
}

.c11 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 100px;
  line-height: 1.1em;
  margin-bottom: 75px;
  -webkit-letter-spacing: -0.035em;
  -moz-letter-spacing: -0.035em;
  -ms-letter-spacing: -0.035em;
  letter-spacing: -0.035em;
}

.c13 {
  max-width: 460px;
  margin-right: 30px;
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  line-height: 1.4em;
}

.c0 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  width: 100%;
  height: calc(100vh - 50px);
  position: relative;
}

.c0[data-type="text"] {
  height: auto;
}

.c0[data-type="text"] .c8 {
  margin-bottom: 150px;
}

.c0[data-type="split"] .c8 {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
}

.c0[data-type="split"] .c5 {
  width: 50%;
}

.c0[data-type="split"] .c1 {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
  width: 50vw;
}

.c0[data-type="split"] .c10 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0[data-type="split"] .c12 {
  margin-bottom: 30px;
}

.c0[data-type="fullscreen"] .c5 {
  padding: 50px;
  color: #fff;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: auto;
  text-shadow: 0 0 40px rgba(0,0,0,0.4);
}

@media (max-width:720px) {
  .c16 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c15 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c15:before {
    min-width: 8px;
    min-height: 8px;
  }
}

@media (max-width:600px) {
  .c17 {
    margin-top: 15px;
  }
}

@media (max-width:720px) {
  .c7 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c4 .PartnerInline {
    padding: 20px 15px 20px;
  }
}

@media (max-width:720px) {
  .c11 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1280px) {
  .c9 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 80px;
    line-height: 1.1em;
  }
}

@media (max-width:900px) {
  .c9 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
  }
}

@media (max-width:600px) {
  .c9 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 45px;
    line-height: 1.2em;
  }
}

@media (max-width:720px) {
  .c13 {
    margin-bottom: 28px;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c0[data-type="split"] .c8 {
    margin-bottom: 20px;
  }

  .c0[data-type="split"] .c5 {
    width: 100%;
  }

  .c0[data-type="split"] .c1 {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
    width: 100%;
  }
}

@media (max-width:720px) {
  .c0[data-type="fullscreen"] .c5 {
    padding: 20px;
  }
}

<div
  className="c0"
  data-type="fullscreen"
  height="calc(100vh - 50px)"
>
  <div>
    <div
      alt="What’s the Path to Winning an Art Prize?"
      className="c1 c2"
      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FZR0wtJhg5Nez7Vm8uCP8Nw%252FDSC_0720-Edit-2.jpg&width=1600&quality=95"
    >
      <div>
        Child 3: Image
      </div>
    </div>
    <div
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
    >
      <div
        className="c7"
      >
        Creativity
      </div>
      <div
        className="c8 c9"
      >
        <div>
          Child 1: Title
        </div>
      </div>
      <div
        className="c10 c11"
      >
        <div
          className="c12 c13"
        >
          <div
            className="feature__deck"
          >
            <div>
              Child 2: Deck
            </div>
          </div>
        </div>
        <div
          className="Byline c14"
          color="white"
        >
          <div
            className="author c15"
            color="white"
          >
            By 
            Casey Lesser
          </div>
          <div
            className="date c16"
          >
            Jun 29, 2017 11:00 am
          </div>
          <div
            className="c17"
          >
            <a
              className="c18"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 14 14"
                width="14px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c18"
              href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&text=What’s the Path to Winning an Art Prize?&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&via=artsy"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 16 14"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c18"
              href="mailto:?subject=What’s the Path to Winning an Art Prize?&body=Check out What’s the Path to Winning an Art Prize? on Artsy: https://www.artsy.net/article/artsy-editorial-path-winning-art-prize"
              onClick={[Function]}
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 17 14"
                width="17px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feature renders feature split header properly 1`] = `
.c15 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c15.date {
  white-space: nowrap;
}

.c14 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c14.date {
  white-space: nowrap;
}

.c14:before {
  content: "";
  display: inline-block;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin: 6px 10px 1px 0;
  background-color: black;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
}

.c17 {
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c17:hover {
  opacity: 0.6;
}

.c17:first-child {
  padding-left: 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: black;
}

.c6 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 10px;
}

.c3 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  margin: auto;
}

.c3 .PartnerInline {
  position: absolute;
  z-index: 1;
  padding: 45px 45px 50px;
}

.c5 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  padding: 20px;
  color: #000;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
  background-image: url(https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FZR0wtJhg5Nez7Vm8uCP8Nw%252FDSC_0720-Edit-2.jpg&width=1600&quality=95);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  right: 0;
  width: 100%;
}

.c10 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 100px;
  line-height: 1.1em;
  margin-bottom: 75px;
  -webkit-letter-spacing: -0.035em;
  -moz-letter-spacing: -0.035em;
  -ms-letter-spacing: -0.035em;
  letter-spacing: -0.035em;
}

.c12 {
  max-width: 460px;
  margin-right: 30px;
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  line-height: 1.4em;
}

.c0 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  width: 100%;
  height: calc(100vh - 50px);
  position: relative;
}

.c0[data-type="text"] {
  height: auto;
}

.c0[data-type="text"] .c7 {
  margin-bottom: 150px;
}

.c0[data-type="split"] .c7 {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
}

.c0[data-type="split"] .c4 {
  width: 50%;
}

.c0[data-type="split"] .c1 {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
  width: 50vw;
}

.c0[data-type="split"] .c9 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0[data-type="split"] .c11 {
  margin-bottom: 30px;
}

.c0[data-type="fullscreen"] .c4 {
  padding: 50px;
  color: #fff;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: auto;
  text-shadow: 0 0 40px rgba(0,0,0,0.4);
}

@media (max-width:720px) {
  .c15 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c14 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c14:before {
    min-width: 8px;
    min-height: 8px;
  }
}

@media (max-width:600px) {
  .c16 {
    margin-top: 15px;
  }
}

@media (max-width:720px) {
  .c6 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c3 .PartnerInline {
    padding: 20px 15px 20px;
  }
}

@media (max-width:720px) {
  .c10 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1280px) {
  .c8 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 80px;
    line-height: 1.1em;
  }
}

@media (max-width:900px) {
  .c8 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
  }
}

@media (max-width:600px) {
  .c8 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 45px;
    line-height: 1.2em;
  }
}

@media (max-width:720px) {
  .c12 {
    margin-bottom: 28px;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c0[data-type="split"] .c7 {
    margin-bottom: 20px;
  }

  .c0[data-type="split"] .c4 {
    width: 100%;
  }

  .c0[data-type="split"] .c1 {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
    width: 100%;
  }
}

@media (max-width:720px) {
  .c0[data-type="fullscreen"] .c4 {
    padding: 20px;
  }
}

<div
  className="c0"
  data-type="split"
  height="calc(100vh - 50px)"
>
  <div
    alt="What’s the Path to Winning an Art Prize?"
    className="c1 c2"
    src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FZR0wtJhg5Nez7Vm8uCP8Nw%252FDSC_0720-Edit-2.jpg&width=1600&quality=95"
  />
  <div
    className="c3"
  >
    <div
      className="c4 c5"
    >
      <div
        className="c6"
      >
        Creativity
      </div>
      <div
        className="c7 c8"
      >
        What’s the Path to Winning an Art Prize?
      </div>
      <div
        className="c9 c10"
      >
        <div
          className="c11 c12"
        >
          <div
            className="feature__deck"
          >
            Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
          </div>
        </div>
        <div
          className="Byline c13"
          color="black"
        >
          <div
            className="author c14"
            color="black"
          >
            By 
            Casey Lesser
          </div>
          <div
            className="date c15"
          >
            Jun 29, 2017 11:00 am
          </div>
          <div
            className="c16"
          >
            <a
              className="c17"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 14 14"
                width="14px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
                    fill="black"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c17"
              href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&text=What’s the Path to Winning an Art Prize?&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&via=artsy"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 16 14"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
                    fill="black"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c17"
              href="mailto:?subject=What’s the Path to Winning an Art Prize?&body=Check out What’s the Path to Winning an Art Prize? on Artsy: https://www.artsy.net/article/artsy-editorial-path-winning-art-prize"
              onClick={[Function]}
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 17 14"
                width="17px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
                    fill="black"
                  />
                </g>
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feature renders feature text header properly 1`] = `
.c13 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c13.date {
  white-space: nowrap;
}

.c12 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c12.date {
  white-space: nowrap;
}

.c12:before {
  content: "";
  display: inline-block;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin: 6px 10px 1px 0;
  background-color: black;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
}

.c15 {
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c15:hover {
  opacity: 0.6;
}

.c15:first-child {
  padding-left: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: black;
}

.c4 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 10px;
}

.c1 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  margin: auto;
}

.c1 .PartnerInline {
  position: absolute;
  z-index: 1;
  padding: 45px 45px 50px;
}

.c3 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  padding: 20px;
  color: #000;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c17 {
  width: 100%;
  height: auto;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  padding: 20px;
  box-sizing: border-box;
}

.c8 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 100px;
  line-height: 1.1em;
  margin-bottom: 75px;
  -webkit-letter-spacing: -0.035em;
  -moz-letter-spacing: -0.035em;
  -ms-letter-spacing: -0.035em;
  letter-spacing: -0.035em;
}

.c10 {
  max-width: 460px;
  margin-right: 30px;
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  line-height: 1.4em;
}

.c0 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  width: 100%;
  height: calc(100vh - 50px);
  position: relative;
}

.c0[data-type="text"] {
  height: auto;
}

.c0[data-type="text"] .c5 {
  margin-bottom: 150px;
}

.c0[data-type="split"] .c5 {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
}

.c0[data-type="split"] .c2 {
  width: 50%;
}

.c0[data-type="split"] .s1ria0lo-0-file__Div-dCIIWC {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
  width: 50vw;
}

.c0[data-type="split"] .c7 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0[data-type="split"] .c9 {
  margin-bottom: 30px;
}

.c0[data-type="fullscreen"] .c2 {
  padding: 50px;
  color: #fff;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: auto;
  text-shadow: 0 0 40px rgba(0,0,0,0.4);
}

@media (max-width:720px) {
  .c13 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c12 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c12:before {
    min-width: 8px;
    min-height: 8px;
  }
}

@media (max-width:600px) {
  .c14 {
    margin-top: 15px;
  }
}

@media (max-width:720px) {
  .c4 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c1 .PartnerInline {
    padding: 20px 15px 20px;
  }
}

@media (max-width:720px) {
  .c8 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1280px) {
  .c6 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 80px;
    line-height: 1.1em;
  }
}

@media (max-width:900px) {
  .c6 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
  }
}

@media (max-width:600px) {
  .c6 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 45px;
    line-height: 1.2em;
  }
}

@media (max-width:720px) {
  .c10 {
    margin-bottom: 28px;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c0[data-type="split"] .c5 {
    margin-bottom: 20px;
  }

  .c0[data-type="split"] .c2 {
    width: 100%;
  }

  .c0[data-type="split"] .s1ria0lo-0-file__Div-dCIIWC {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
    width: 100%;
  }
}

@media (max-width:720px) {
  .c0[data-type="fullscreen"] .c2 {
    padding: 20px;
  }
}

<div
  className="c0"
  data-type="text"
  height="calc(100vh - 50px)"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <div
        className="c4"
      >
        Creativity
      </div>
      <div
        className="c5 c6"
      >
        What’s the Path to Winning an Art Prize?
      </div>
      <div
        className="c7 c8"
      >
        <div
          className="c9 c10"
        >
          <div
            className="feature__deck"
          >
            Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
          </div>
        </div>
        <div
          className="Byline c11"
          color="black"
        >
          <div
            className="author c12"
            color="black"
          >
            By 
            Casey Lesser
          </div>
          <div
            className="date c13"
          >
            Jun 29, 2017 11:00 am
          </div>
          <div
            className="c14"
          >
            <a
              className="c15"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 14 14"
                width="14px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
                    fill="black"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c15"
              href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&text=What’s the Path to Winning an Art Prize?&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&via=artsy"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 16 14"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
                    fill="black"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c15"
              href="mailto:?subject=What’s the Path to Winning an Art Prize?&body=Check out What’s the Path to Winning an Art Prize? on Artsy: https://www.artsy.net/article/artsy-editorial-path-winning-art-prize"
              onClick={[Function]}
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 17 14"
                width="17px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
                    fill="black"
                  />
                </g>
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c16"
    >
      <img
        alt="What’s the Path to Winning an Art Prize?"
        className="c17"
        src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FYqTtwB7AWqKD95NGItwjJg%252FRachel_Rossin_portrait_2.jpg&width=1200&quality=95"
      />
    </div>
  </div>
</div>
`;

exports[`feature renders superArticle full header properly 1`] = `
.c21 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c21.date {
  white-space: nowrap;
}

.c20 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin: 10px 30px 0 0;
}

.c20.date {
  white-space: nowrap;
}

.c20:before {
  content: "";
  display: inline-block;
  min-width: 10px;
  min-height: 10px;
  border-radius: 50%;
  margin: 6px 10px 1px 0;
  background-color: white;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  line-height: 1em;
}

.c23 {
  text-decoration: none;
  padding-left: 7px;
  padding-right: 7px;
}

.c23:hover {
  opacity: 0.6;
}

.c23:first-child {
  padding-left: 0;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: white;
}

.c7 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
}

.c9 {
  width: 15px;
  height: 15px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px;
}

.c5 img {
  max-height: 32px;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.c5 .c8 {
  margin: 0 20px;
}

.c5 .c6 {
  margin: 0;
  vertical-align: middle;
}

.c3 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
  background-image: linear-gradient(to bottom,rgba(0,0,0,0),rgba(0,0,0,0.3));
}

.c12 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 10px;
}

.c4 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  margin: auto;
}

.c4 .PartnerInline {
  position: absolute;
  z-index: 1;
  padding: 45px 45px 50px;
}

.c11 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  padding: 20px;
  color: #000;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
  background-image: url(https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FZR0wtJhg5Nez7Vm8uCP8Nw%252FDSC_0720-Edit-2.jpg&width=1600&quality=95);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  right: 0;
  width: 100%;
}

.c16 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c14 {
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 100px;
  line-height: 1.1em;
  margin-bottom: 75px;
  -webkit-letter-spacing: -0.035em;
  -moz-letter-spacing: -0.035em;
  -ms-letter-spacing: -0.035em;
  letter-spacing: -0.035em;
}

.c18 {
  max-width: 460px;
  margin-right: 30px;
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  line-height: 1.4em;
}

.c0 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  width: 100%;
  height: calc(100vh - 50px);
  position: relative;
}

.c0[data-type="text"] {
  height: auto;
}

.c0[data-type="text"] .c13 {
  margin-bottom: 150px;
}

.c0[data-type="split"] .c13 {
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
}

.c0[data-type="split"] .c10 {
  width: 50%;
}

.c0[data-type="split"] .c1 {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
  width: 50%;
  border: 20px solid white;
}

.c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
  width: 50vw;
}

.c0[data-type="split"] .c15 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0[data-type="split"] .c17 {
  margin-bottom: 30px;
}

.c0[data-type="fullscreen"] .c10 {
  padding: 50px;
  color: #fff;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: auto;
  text-shadow: 0 0 40px rgba(0,0,0,0.4);
}

@media (max-width:720px) {
  .c21 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c20 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    margin: 10px 20px 0 0;
  }
}

@media (max-width:720px) {
  .c20:before {
    min-width: 8px;
    min-height: 8px;
  }
}

@media (max-width:600px) {
  .c22 {
    margin-top: 15px;
  }
}

@media (max-width:900px) {
  .c9 {
    width: 13px;
    height: 13px;
  }
}

@media (max-width:720px) {
  .c5 img {
    max-height: 24px;
  }

  .c5 .c6 {
    font-size: 24px;
  }

  .c5 .c8 {
    margin: 0 10px;
  }
}

@media (max-width:720px) {
  .c12 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c4 .PartnerInline {
    padding: 20px 15px 20px;
  }
}

@media (max-width:720px) {
  .c16 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1280px) {
  .c14 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 80px;
    line-height: 1.1em;
  }
}

@media (max-width:900px) {
  .c14 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
  }
}

@media (max-width:600px) {
  .c14 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 45px;
    line-height: 1.2em;
  }
}

@media (max-width:720px) {
  .c18 {
    margin-bottom: 28px;
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c0[data-type="split"] .c13 {
    margin-bottom: 20px;
  }

  .c0[data-type="split"] .c10 {
    width: 100%;
  }

  .c0[data-type="split"] .c1 {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .s1ria0lo-0-file__Div-bbbPPm {
    width: 100%;
    position: relative;
    border: 0px;
    margin-bottom: 30px;
  }

  .c0[data-type="split"] .file__FeatureVideo-s1ria0lo-2 {
    width: 100%;
  }
}

@media (max-width:720px) {
  .c0[data-type="fullscreen"] .c10 {
    padding: 20px;
  }
}

<div
  className="c0"
  data-type="fullscreen"
  height="calc(100vh - 50px)"
>
  <div>
    <div
      alt="What’s the Path to Winning an Art Prize?"
      className="c1 c2"
      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FZR0wtJhg5Nez7Vm8uCP8Nw%252FDSC_0720-Edit-2.jpg&width=1600&quality=95"
    />
    <div
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="PartnerInline c5"
    >
      <a
        href="/"
      >
        <div
          className="c6 c7"
          onClick={undefined}
          style={undefined}
        >
          
        </div>
      </a>
      <svg
        className="c8 c9"
        version="1.1"
        viewBox="0 0 15 15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="2"
        >
          <g
            fill="white"
            transform="translate(-101.000000, -18.000000)"
          >
            <g
              transform="translate(101.000000, 18.000000)"
            >
              <rect
                height="1"
                width="15"
                x="0"
                y="7"
              />
              <rect
                height="1"
                transform="translate(7.500000, 7.500000) rotate(-90.000000) translate(-7.500000, -7.500000) "
                width="15"
                x="0"
                y="7"
              />
            </g>
          </g>
        </g>
      </svg>
      <a
        href="https://www.ubs.com/microsites/planet-art/home.html"
        onClick={[Function]}
        target="_blank"
      >
        <img
          src="https://artsy-media-uploads.s3.amazonaws.com/qp6GUcn5RkvscdYEBmqFXw%2FUBS_White.png"
        />
      </a>
    </div>
    <div
      className="c10 c11"
    >
      <div
        className="c12"
      >
        Creativity
      </div>
      <div
        className="c13 c14"
      >
        What’s the Path to Winning an Art Prize?
      </div>
      <div
        className="c15 c16"
      >
        <div
          className="c17 c18"
        >
          <div
            className="feature__deck"
          >
            Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
          </div>
        </div>
        <div
          className="Byline c19"
          color="white"
        >
          <div
            className="author c20"
            color="white"
          >
            By 
            Casey Lesser
          </div>
          <div
            className="date c21"
          >
            Jun 29, 2017 11:00 am
          </div>
          <div
            className="c22"
          >
            <a
              className="c23"
              href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 14 14"
                width="14px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M13.22846,-0.00014 L0.77266,-0.00014 C0.34566,-0.00014 -0.00014,0.34636 -0.00014,0.77266 L-0.00014,13.22706 C-0.00014,13.65336 0.34566,13.99986 0.77266,13.99986 L7.47866,13.99986 L7.47866,8.57836 L5.65376,8.57836 L5.65376,6.46576 L7.47866,6.46576 L7.47866,4.90686 C7.47866,3.09876 8.58256,2.11456 10.19606,2.11456 C10.74066,2.11246 11.28526,2.14046 11.82706,2.19786 L11.82706,4.08576 L10.70776,4.08576 C9.83066,4.08576 9.65846,4.50366 9.65846,5.11476 L9.65846,6.46366 L11.75146,6.46366 L11.47846,8.57696 L9.65986,8.57696 L9.65986,13.99986 L13.22776,13.99986 C13.65406,13.99986 13.99986,13.65406 13.99986,13.22706 L13.99986,0.77266 C13.99986,0.34636 13.65406,-0.00014 13.22776,-0.00014"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c23"
              href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&text=What’s the Path to Winning an Art Prize?&url=https%3A%2F%2Fwww.artsy.net%2Farticle%2Fartsy-editorial-path-winning-art-prize&via=artsy"
              onClick={[Function]}
              target="_blank"
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 16 14"
                width="16px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M15.9786472,1.9961647 C15.3802193,2.26166928 14.7456495,2.43612386 14.0957888,2.51257805 C14.7810964,2.1018105 15.2933396,1.45542502 15.537298,0.69435824 C14.8936926,1.07732426 14.189619,1.34699907 13.4542686,1.49087197 C12.8342946,0.828500604 11.967582,0.45318 11.0598622,0.45318 C9.25067784,0.458740305 7.78762253,1.92735593 7.78831756,3.73584521 C7.78762253,3.98744902 7.81542405,4.23835779 7.87033207,4.48370626 C5.23335731,4.35095397 2.77639743,3.10475056 1.11108601,1.05577808 C0.819169985,1.55620555 0.665566552,2.1254418 0.666261591,2.70510362 C0.664871514,3.80256887 1.21256158,4.82775015 2.12653675,5.4352135 C1.60595318,5.42061769 1.09649021,5.28021999 0.642630293,5.02583602 L0.642630293,5.06684327 C0.639155103,6.62859401 1.74009554,7.97488291 3.27195963,8.28139474 C2.99116422,8.36062909 2.70063827,8.40163634 2.40941728,8.40302642 C2.20229591,8.40372145 1.99517454,8.38426039 1.7922234,8.34603329 C2.22106194,9.68120158 3.45127948,10.5958718 4.85317144,10.6229783 C3.69315276,11.5362584 2.25928904,12.0311256 0.783028001,12.0283454 C0.520998616,12.0283454 0.25966427,12.0130546 -0.00028,11.9810828 C1.49961234,12.9437107 3.24554818,13.4552588 5.02762601,13.4531737 C11.0612522,13.4531737 14.3585132,8.45584932 14.3585132,4.12298146 C14.3585132,3.9798036 14.3585132,3.83940589 14.3473926,3.69970322 C14.9896079,3.23611277 15.5442483,2.66201126 15.9855976,2.00311509"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
            <a
              className="c23"
              href="mailto:?subject=What’s the Path to Winning an Art Prize?&body=Check out What’s the Path to Winning an Art Prize? on Artsy: https://www.artsy.net/article/artsy-editorial-path-winning-art-prize"
              onClick={[Function]}
            >
              <svg
                height="14px"
                version="1.1"
                viewBox="0 0 17 14"
                width="17px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fillRule="evenodd"
                  stroke="none"
                  strokeWidth="1"
                >
                  <path
                    d="M8.09330005,8.15962873 L16.0866701,1.92619024 L16.0866701,1.14909566 C16.0866701,0.764718818 15.7752762,0.45402 15.3915944,0.45402 L0.795005656,0.45402 C0.411323894,0.45402 0.09993,0.764718818 0.09993,1.14909566 L0.09993,1.92619024 L8.09330005,8.15962873 Z M16.0866701,3.68820703 L16.0866701,12.7589443 C16.0866701,13.1426261 15.7752762,13.45402 15.3915944,13.45402 L0.795005656,13.45402 C0.411323894,13.45402 0.09993,13.1426261 0.09993,12.7589443 L0.09993,3.68820703 L7.66582852,9.58939935 C7.79163721,9.68740502 7.94246863,9.73606031 8.09330005,9.73606031 C8.24413147,9.73606031 8.39496288,9.68740502 8.52077158,9.58939935 L16.0866701,3.68820703 Z"
                    fill="white"
                  />
                </g>
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
